# UCI_EECS22L_P1

./: CMakeLists.txt  COPYWRITE.txt  GUI.c  INSTALL_DEV.txt  INSTALL_USER.txt  MovesLog.txt  README.md  README.txt  SDL_Sample.c  SuperSimpleInstallAndRun.sh  SuperSimpleInstallAndRunWithGitClone.sh  chess  chess.pub  compile.sh  run.sh  test.c
Dev/Chess/: CMakeLists.txt
Dev/Chess/include/: ENV.h  GUI.h  constant.h  jsmn.h
Dev/Chess/src/: ENV.c  GUI.c
TestLog/: test  test.txt
chess-alpha-release/: CMakeLists.txt  INSTALL.txt  README.txt  SuperSimpleInstallAndRun.sh  SuperSimpleInstallAndRunWithGitClone.sh
chess-alpha-release/include/: ENV.h  GUI.h  stack.h
chess-alpha-release/src/: ENV.c  GUI.c  jsmn.c  main.c  vector.c
include/: AI.h  ENV.h  GUI.h  GameENV.h  GameGUI.h  constant.h  jsmn.h  stack.h  struct.h  vector.h
src/: AI.c  AI_Aux.c  AI_model1.c  AI_model2.c  CMakeLists.txt  ENV.c  GUI.c  GameENV.c  GameGUI.c  SDL_Sample.c  jsmn.c  main.c  stack.c  stack.c~  vector.c
src/AI/: AI_Aux.c  AI_model2.c  AI_model3.c  CMakeLists.txt
